--- a/contract/package.json
+++ b/contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@midnight-ntwrk/counter-contract",
+  "name": "@midnight-ntwrk/donation-contract",
   "version": "0.1.0",
   "license": "Apache-2.0",
   "private": true,
@@ -16,10 +16,10 @@
     }
   },
   "scripts": {
-    "compact": "compact compile src/counter.compact src/managed/counter",
+    "compact": "compact compile src/donation.compact src/managed/donation",
     "test": "vitest run",
     "test:compile": "npm run compact && vitest run",
-    "build": "rm -rf dist && tsc --project tsconfig.build.json && cp -Rf ./src/managed ./dist/managed && cp ./src/counter.compact ./dist",
+    "build": "rm -rf dist && tsc --project tsconfig.build.json && cp -Rf ./src/managed ./dist/managed && cp ./src/donation.compact ./dist",
     "lint": "eslint src",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   }
