--- a/counter-cli/proof-server.yml
+++ b/counter-cli/proof-server.yml
@@ -3,6 +3,6 @@ services:
     image: 'midnightntwrk/proof-server:7.0.0'
     command: ['midnight-proof-server -v']
     ports:
-      - '6300:6300'
+      - '6300'  # container port only -> random host port (avoids "port already allocated")
     environment:
       RUST_BACKTRACE: 'full'
