--- a/counter-cli/standalone.yml
+++ b/counter-cli/standalone.yml
@@ -4,7 +4,7 @@ services:
     image: 'midnightntwrk/proof-server:7.0.0'
     command: ['midnight-proof-server -v']
     ports:
-      - '6300'
+      - '6300:6300'   # host:container so API on host can reach 127.0.0.1:6300
     environment:
       RUST_BACKTRACE: 'full'
     healthcheck:
@@ -19,7 +19,7 @@ services:
     image: 'midnightntwrk/indexer-standalone:3.0.0'
     env_file: standalone.env.example
     ports:
-      - '0:8088'
+      - '8088:8088'   # host:container so API on host can reach 127.0.0.1:8088
     environment:
       RUST_LOG: 'indexer=info,chain_indexer=info,indexer_api=info,wallet_indexer=info,indexer_common=info,fastrace_opentelemetry=off,info'
       APP__APPLICATION__NETWORK_ID: 'undeployed'
@@ -37,7 +37,7 @@ services:
     image: 'midnightntwrk/midnight-node:0.20.0'
     container_name: 'counter-node'
     ports:
-      - '9944'
+      - '9944:9944'   # host:container so API on host can reach 127.0.0.1:9944
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:9944/health']
       interval: 2s
