docs: add deployed contract address - also rename project from example-counter to anonymous-donation, update dependencies, and adjust configurations for new DApp structure - also fix linting
Signed-off-by: sharifmdathar <116189751+sharifmdathar@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,10 +28,10 @@ updates:
       - 'contract'
 
   - package-ecosystem: "npm"
-    directory: "/counter-cli"
+    directory: "/donation-cli"
     schedule:
       interval: "daily"
     labels:
       - 'dependencies'
       - 'npm'
-      - 'counter-cli'
+      - 'donation-cli'
