--- a/donation-cli/package.json
+++ b/donation-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@midnight-ntwrk/counter-cli",
+  "name": "anonymous-donation-cli",
   "version": "0.1.0",
   "license": "Apache-2.0",
   "private": true,
@@ -14,9 +14,14 @@
     "preview": "node --experimental-specifier-resolution=node --loader ts-node/esm src/preview.ts",
     "preview-ps": "docker compose -f proof-server.yml pull && node --experimental-specifier-resolution=node --loader ts-node/esm src/preview-start-proof-server.ts",
     "preprod": "node --experimental-specifier-resolution=node --loader ts-node/esm src/preprod.ts",
-    "preprod-ps": "docker compose -f proof-server.yml pull && node --experimental-specifier-resolution=node --loader ts-node/esm src/preprod-start-proof-server.ts","server":"bun src/server.ts"
+    "preprod-ps": "docker compose -f proof-server.yml pull && node --experimental-specifier-resolution=node --loader ts-node/esm src/preprod-start-proof-server.ts",
+    "server": "bun src/server.ts"
   },
   "dependencies": {
-    "@midnight-ntwrk/donation-contract": "*","express":"^4.21.0"
+    "anonymous-donation-contract": "*",
+    "express": "^4.21.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.6"
   }
 }
