--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "type": "module",
   "packageManager": "bun",
-  "workspaces": ["contract", "donation-cli", "frontend"],
+  "workspaces": [
+    "contract",
+    "donation-cli",
+    "frontend"
+  ],
   "devDependencies": {
     "@eslint/js": "^10.0.1",
     "@types/node": "^25.2.3",
@@ -17,6 +21,10 @@
     "testcontainers": "^11.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
+    "vite-plugin-node-polyfills": "^0.25.0",
+    "vite-plugin-static-copy": "^3.2.0",
+    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-wasm": "^3.5.0",
     "vitest": "^4.0.18"
   },
   "dependencies": {
@@ -38,5 +46,11 @@
     "pino": "^10.3.1",
     "pino-pretty": "^13.1.3",
     "ws": "^8.19.0"
+  },
+  "overrides": {
+    "readable-stream": "3.6.2"
+  },
+  "resolutions": {
+    "readable-stream": "3.6.2"
   }
 }
